--- a/quickcom-app/styles/core/_reset.scss
+++ b/quickcom-app/styles/core/_reset.scss
@@ -10,6 +10,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-family: 'Inter', sans-serif;
 	word-break: break-word;
+	position: relative;
 }
 
 img,
